--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,7 +25,7 @@
     <string name="ratios">Ratios</string>
     <string name="purity">Purity</string>
     <string name="apply_filters">Search</string>
-    <string name="clear_filters">Reset filters</string>
+    <string name="clear_filters">Reset</string>
     <string name="enter_search_query">Search query</string>
     <string name="enter_tags">Tags (comma separated)</string>
     <string name="no_results_found">No results found</string>
