--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,8 @@
     <!-- Search page strings -->
     <string name="search">Search</string>
     <string name="search_wallpapers">Search Wallpapers</string>
+    <string name="popular_tags">Popular Tags:</string>
+    <string name="tag_placeholder">Tag</string>
     <string name="keyword">Keyword</string>
     <string name="tags">Tags</string>
     <string name="categories">Categories</string>
