refactor: split SearchActivity to SearchFilterActivity & SearchResultsActivity
feat: implement Parcelable for WallhavenRatio and update intent handling

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,6 +45,7 @@
     <string name="filter">Filter</string>
     <string name="search_results">Search Results</string>
     <string name="filters">Filters</string>
+    <string name="try_different_search_terms">Try different search terms or adjust your filters</string>
 
     <!-- Wallpaper viewer strings -->
     <string name="back">Back</string>
