--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,6 +55,11 @@
     <string name="set_both_screens_wallpaper">Set Both Screens Wallpaper</string>
     <string name="toggle_aspect_ratio">Free Crop</string>
     <string name="reset_crop">Reset</string>
+    <string name="favorite">Favorite</string>
+    <string name="save_to_device">Save to device</string>
+    <string name="add_to_favorites">Add to favorites</string>
+    <string name="remove_from_favorites">Remove from favorites</string>
+    <string name="wallpaper_info">Wallpaper info</string>
 
     <!-- Local Fragment strings -->
     <string name="no_local_wallpapers_found">No local wallpapers found</string>
